[gd_scene load_steps=4 format=3 uid="uid://b41y8i4yvsaog"]

[ext_resource type="Script" uid="uid://lh6jd328218b" path="res://src/objects/generic/pistol_projectile.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://7g6kbrqlsucb" path="res://sprites/objects/pistol_projectile/claw_bullet.png" id="2"]

[sub_resource type="CircleShape2D" id="1"]
radius = 2.56518

[node name="PistolProjectile" type="RigidBody2D"]
collision_layer = 16
mass = 0.0001
gravity_scale = 0.0
custom_integrator = true
max_contacts_reported = 1
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2368

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("1")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
